--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,14 @@ edition = "2021"
 license = "MIT/Apache-2.0"
 homepage = "https://github.com/wayk/ceviche-rs"
 repository = "https://github.com/wayk/ceviche-rs"
-authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>", "Sébastien Duquette <sduquette@devolutions.net>", "Richard Markiewicz <rmarkiewicz@devolutions.net>"]
+authors = [
+    "Marc-André Moreau <marcandre.moreau@gmail.com>",
+    "Sébastien Duquette <sduquette@devolutions.net>",
+    "Richard Markiewicz <rmarkiewicz@devolutions.net>",
+]
 keywords = ["daemon", "service"]
 description = "Rust daemon/service wrapper"
-exclude = [
-    ".*",
-    "appveyor.yml"
-]
+exclude = [".*", "appveyor.yml"]
 
 [dependencies]
 cfg-if = "1"
@@ -19,8 +20,28 @@ ctrlc = { version = "3.1", features = ["termination"] }
 log = "0.4"
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winbase", "winerror", "winuser", "winsvc", "libloaderapi", "errhandlingapi"] }
-widestring = "0.4.3"
+winapi = { version = "0.3", features = [
+    "winbase",
+    "winerror",
+    "winuser",
+    "winsvc",
+    "libloaderapi",
+    "errhandlingapi",
+] }
+widestring = "1.0.2"
+
+[target.'cfg(windows)'.dev-dependencies]
+winapi = { version = "0.3", features = [
+    "winbase",
+    "winerror",
+    "winuser",
+    "winsvc",
+    "libloaderapi",
+    "errhandlingapi",
+    "securitybaseapi",
+    "handleapi",
+] }
+widestring = "1.0.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 systemd-rs = "^0.1.2"
